force-app/main/default/objects/ucinn_ascendv2__Funding_Interest__c/ucinn_ascendv2__Funding_Interest__c.object-meta.xml
<CustomObject>
    <description>Where org is interested in donating to (an association, nonprofit, etc). Used to solicit specific projects.</description>
    <label>Funding Interest</label>
    <nameField>
        <label>Funding Interest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>