force-app/main/default/objects/ucinn_ascendv2__Funding_Interest__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Self-Reported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>