force-app/main/default/objects/ucinn_ascendv2__Funding_Interest__c/fields/Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source__c</fullName>
    <inlineHelpText>This field should provide more detail on the nature of the funding interest information (eg Marts and Lundy Survey, Wealth-X, etc.)</inlineHelpText>
    <label>Sub-Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>