force-app/main/default/objects/ucinn_ascendv2__Funding_Interest__c/fields/ucinn_ascendv2__Foundation_Funding_Interest__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Foundation_Funding_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foundation Funding Interest</label>
    <referenceTo>ucinn_ascendv2__Foundation_Funding_Interests__c</referenceTo>
    <relationshipLabel>Funding Interests</relationshipLabel>
    <relationshipName>Funding_Interests_Fdn_Funding_Interest</relationshipName>
    <type>Lookup</type>
</CustomField>