force-app/main/default/objects/ucinn_ascendv2__Funding_Interest__c/fields/ucinn_ascendv2__Foundation_Funding_Interest_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Foundation_Funding_Interest_Name_Formula__c</fullName>
    <formula>ucinn_ascendv2__Foundation_Funding_Interest__r.Name</formula>
    <label>Foundation Funding Interest Name</label>
    <type>Text</type>
</CustomField>