force-app/main/default/objects/ucinn_ascendv2__Funding_Interest__c/fields/ucinn_ascendv2__Funding_Interest_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Funding_Interest_Name_Auto_Number__c</fullName>
    <displayFormat>FI-{0000000}</displayFormat>
    <label>Funding Interest Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>