force-app/main/default/objects/ucinn_ascendv2__Funding_Interest__c/recordTypes/ucinn_ascendv2__Account_Funding_Interest.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Account_Funding_Interest</fullName>
    <active>true</active>
    <description>Funding interest related to the corporation or organization.</description>
    <label>Account Funding Interest</label>
</RecordType>