force-app/main/default/objects/ucinn_ascendv2__Funding_Interest__c/listViews/Filter_by_specific_funding_interest.listView-meta.xml
<ListView>
    <fullName>Filter_by_specific_funding_interest</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Account__c</columns>
    <columns>ucinn_ascendv2__Start_Date__c</columns>
    <columns>ucinn_ascendv2__End_Date__c</columns>
    <columns>Notes__c</columns>
    <columns>ucinn_ascendv2__Foundation_Funding_Interest__c</columns>
    <columns>ucinn_ascendv2__Foundation_Funding_Interest_Name_Formula__c</columns>
    <columns>Source__c</columns>
    <columns>Sub_Source__c</columns>
    <columns>Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Filter by specific funding interest</label>
</ListView>